--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "docx",
-    "version": "8.5.0",
+    "name": "@xnscu/docx",
+    "version": "8.5.4",
     "description": "Easily generate .docx files with JS/TS with a nice declarative API. Works for Node and on the Browser.",
     "type": "module",
     "main": "build/index.umd.js",
@@ -18,7 +18,7 @@
         "build"
     ],
     "scripts": {
-        "build": "tsc && vite build",
+        "build": "vite build",
         "test": "vitest --ui --coverage",
         "test:ci": "vitest run --coverage",
         "prepublishOnly": "npm run build --omit=dev",
